Contact section redisign

--- a/index.html
+++ b/index.html
@@ -1035,17 +1035,9 @@
                 </div>
             </div>
             <article class="section__body-container">
-                <section class="section__body__highlight">
-                    <div
-                        class="
-                            section__body__highlight__buttons-round-container-light
-                        "
-                    >
-                        <div
-                            class="
-                                section__body__highlight__buttons-round-container-dark
-                            "
-                        >
+                <section class="section__body__highlight--transparent">
+                    <div class="section__body__highlight__picture">
+                        <div class="section__body__highlight__circle">
                             <a
                                 class="button-light"
                                 href="mailto:work@damiandemasi.com"
@@ -1056,7 +1048,7 @@
                                     alt=""
                                     width="20"
                                     height="20"
-                                    class="icon-button-light"
+                                    class="button-light__icon"
                                 /><span class="button-light__text"
                                     >work@damiandemasi.com</span
                                 >
@@ -1071,7 +1063,7 @@
                                     alt=""
                                     width="20"
                                     height="20"
-                                    class="icon-button-light"
+                                    class="button-light__icon"
                                 /><span class="button-light__text"
                                     >LinkedIn</span
                                 >
@@ -1079,9 +1071,17 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- ////////// Section: Contact - Form ////////// -->
+
                 <section class="section__body__description">
-                    <h3 class="article__title--dark">Let's get in touch!</h3>
-                    <div class="article--dark">
+                    <header class="article__header">
+                        <div class="article__header__section">Contact</div>
+                        <h2 class="article__header__title">
+                            Let's get in touch!
+                        </h2>
+                    </header>
+                    <div class="article--text">
                         <p class="big-icon">📢</p>
                         <p>
                             You can shoot me an email, send me a message on
