--- a/index.html
+++ b/index.html
@@ -36,68 +36,86 @@
     <body>
         <div class="sticky-nav-reference"></div>
         <nav class="sticky-nav hidden">
-            <div class="nav__logos-container">
-                <a
-                    class="sticky-nav__logo"
-                    href="https://www.linkedin.com/in/damian-demasi-5451378/"
-                    target="_blank"
-                >
+            <div class="sticky-nav-container">
+                <div class="nav__bio-container">
                     <img
-                        src="./src/img/icon-linkedin.png"
-                        alt="LinkedIn"
-                        width="40"
-                        height="40"
-                        class="icon-nav-light"
-                /></a>
-                <a
-                    class="sticky-nav__logo"
-                    href="https://github.com/Colo-Codes"
-                    target="_blank"
-                    ><img
-                        src="./src/img/icon-github.png"
-                        alt="GitHub"
-                        width="40"
-                        height="40"
-                        class="icon-nav-light"
-                /></a>
-                <a
-                    class="sticky-nav__logo"
-                    href="https://twitter.com/DamianDemasi"
-                    target="_blank"
-                    ><img
-                        src="./src/img/icon-twitter.png"
-                        alt="Twitter"
-                        width="40"
-                        height="40"
-                        class="icon-nav-light"
-                /></a>
-            </div>
-            <div class="nav__links-container">
-                <div>
+                        src="./src/img/profile-picture.jpeg"
+                        alt="Damian Demasi"
+                        width="76"
+                        height="76"
+                        class="nav-image"
+                    />
+                    <div class="nav__bio__name-container">
+                        <div>Damian Demasi</div>
+                        <div>Web Developer</div>
+                    </div>
+                </div>
+                <div class="nav__logos-container">
                     <a
-                        href="#projects"
-                        class="sticky-nav__link sticky-nav__link--active"
-                        id="nav-projects"
-                        >Projects</a
+                        class="sticky-nav__logo"
+                        href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                        target="_blank"
                     >
-                </div>
-                <div>
+                        <img
+                            src="./src/img/icon-linkedin.png"
+                            alt="LinkedIn"
+                            width="40"
+                            height="40"
+                            class="icon-nav-light"
+                    /></a>
                     <a
-                        href="#blog-posts"
-                        class="sticky-nav__link"
-                        id="nav-blog-posts"
-                        >Blog Posts</a
-                    >
+                        class="sticky-nav__logo"
+                        href="https://github.com/Colo-Codes"
+                        target="_blank"
+                        ><img
+                            src="./src/img/icon-github.png"
+                            alt="GitHub"
+                            width="40"
+                            height="40"
+                            class="icon-nav-light"
+                    /></a>
+                    <a
+                        class="sticky-nav__logo"
+                        href="https://twitter.com/DamianDemasi"
+                        target="_blank"
+                        ><img
+                            src="./src/img/icon-twitter.png"
+                            alt="Twitter"
+                            width="40"
+                            height="40"
+                            class="icon-nav-light"
+                    /></a>
                 </div>
-                <div>
-                    <a href="#about" class="sticky-nav__link" id="nav-about"
-                        >About</a
-                    >
-                </div>
-                <div>
-                    <a href="#contact" class="sticky-nav__link" id="nav-contact"
-                        >Contact</a
-                    >
+                <div class="nav__links-container">
+                    <div>
+                        <a
+                            href="#projects"
+                            class="sticky-nav__link sticky-nav__link--active"
+                            id="nav-projects"
+                            >Projects</a
+                        >
+                    </div>
+                    <div>
+                        <a
+                            href="#blog-posts"
+                            class="sticky-nav__link"
+                            id="nav-blog-posts"
+                            >Blog Posts</a
+                        >
+                    </div>
+                    <div>
+                        <a href="#about" class="sticky-nav__link" id="nav-about"
+                            >About</a
+                        >
+                    </div>
+                    <div>
+                        <a
+                            href="#contact"
+                            class="sticky-nav__link"
+                            id="nav-contact"
+                            >Contact</a
+                        >
+                    </div>
                 </div>
             </div>
         </nav>
