--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,10 @@
                                 cols="50"
                                 placeholder="Your message"
                             ></textarea>
-                            <div data-netlify-recaptcha="true"></div>
+                            <div
+                                class="form__captcha"
+                                data-netlify-recaptcha="true"
+                            ></div>
                             <button
                                 class="button--dark"
                                 type="submit"
