--- a/index.html
+++ b/index.html
@@ -1135,10 +1135,9 @@
                                 cols="50"
                                 placeholder="Your message"
                             ></textarea>
-                            <div
-                                class="form__captcha"
-                                data-netlify-recaptcha="true"
-                            ></div>
+                            <div class="form__captcha">
+                                <div data-netlify-recaptcha="true"></div>
+                            </div>
                             <button
                                 class="button--dark"
                                 type="submit"
