--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,6 @@
                         </p>
                         <!-- Using Netlify to send form data -->
                         <form
-                            action="POST"
                             method="post"
                             id="message-form"
                             data-netlify="true"
@@ -1135,6 +1134,7 @@
                                 cols="50"
                                 placeholder="Your message"
                             ></textarea>
+                            <!-- Netlify spam filter -->
                             <div class="form__captcha">
                                 <div data-netlify-recaptcha="true"></div>
                             </div>
