Form required fields

--- a/index.html
+++ b/index.html
@@ -1118,6 +1118,7 @@
                                 id="name"
                                 name="name"
                                 placeholder="Your name"
+                                required
                             />
                             <input
                                 class="form__input"
@@ -1125,6 +1126,7 @@
                                 id="email"
                                 name="email"
                                 placeholder="Your email"
+                                required
                             />
                             <textarea
                                 class="form__textarea"
@@ -1133,6 +1135,7 @@
                                 rows="10"
                                 cols="50"
                                 placeholder="Your message"
+                                required
                             ></textarea>
                             <!-- Netlify spam filter -->
                             <div class="form__captcha">
