Netlify form tweak

--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,8 @@
                         </p>
                         <!-- Using Netlify to send form data -->
                         <form
-                            method="post"
+                            method="POST"
+                            name="message-form"
                             id="message-form"
                             data-netlify="true"
                         >
