--- a/index.html
+++ b/index.html
@@ -1139,9 +1139,10 @@
                                 required
                             ></textarea>
                             <!-- Netlify spam filter -->
-                            <div class="form__captcha">
-                                <div data-netlify-recaptcha="true"></div>
-                            </div>
+                            <div
+                                class="form__captcha"
+                                data-netlify-recaptcha="true"
+                            ></div>
                             <button
                                 class="button--dark"
                                 type="submit"
