--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,46 @@
                             below.
                         </p>
                         <!-- Using Netlify to send form data -->
-                        <form
+
+                        <form name="contact" method="POST" data-netlify="true">
+                            <p>
+                                <label
+                                    >Your Name: <input type="text" name="name"
+                                /></label>
+                            </p>
+                            <p>
+                                <label
+                                    >Your Email:
+                                    <input type="email" name="email"
+                                /></label>
+                            </p>
+                            <p>
+                                <label
+                                    >Your Role:
+                                    <select name="role[]" multiple>
+                                        <option value="leader">Leader</option>
+                                        <option value="follower">
+                                            Follower
+                                        </option>
+                                    </select></label
+                                >
+                            </p>
+                            <p>
+                                <label
+                                    >Message:
+                                    <textarea name="message"></textarea>
+                                </label>
+                            </p>
+                            <div
+                                class="form__captcha"
+                                data-netlify-recaptcha="true"
+                            ></div>
+                            <p>
+                                <button type="submit">Send</button>
+                            </p>
+                        </form>
+
+                        <!-- <form
                             action="POST"
                             method="POST"
                             id="message-form"
@@ -1137,9 +1176,9 @@
                                 cols="50"
                                 placeholder="Your message"
                                 required
-                            ></textarea>
-                            <!-- Netlify spam filter -->
-                            <div
+                            ></textarea> -->
+                        <!-- Netlify spam filter -->
+                        <!-- <div
                                 class="form__captcha"
                                 data-netlify-recaptcha="true"
                             ></div>
@@ -1159,7 +1198,7 @@
                                     >Send message</span
                                 >
                             </button>
-                        </form>
+                        </form> -->
                     </div>
                 </section>
             </article>
