Recaptcha issue - alpha

--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,12 @@
                         </p>
                         <!-- Using Netlify to send form data -->
 
-                        <form name="contact" method="POST" data-netlify="true">
+                        <form
+                            name="contact"
+                            method="POST"
+                            data-netlify="true"
+                            data-netlify-recaptcha="true"
+                        >
                             <p>
                                 <label
                                     >Your Name: <input type="text" name="name"
