Recaptcha issue - gamma

--- a/index.html
+++ b/index.html
@@ -1108,9 +1108,10 @@
                         </p>
                         <!-- Using Netlify to send form data -->
                         <form
-                            action="POST"
-                            method="post"
+                            action="success"
+                            method="POST"
                             id="message-form"
+                            data-netlify-recaptcha="true"
                             data-netlify="true"
                         >
                             <input
@@ -1135,10 +1136,7 @@
                                 cols="50"
                                 placeholder="Your message"
                             ></textarea>
-                            <div
-                                class="form__captcha"
-                                data-netlify-recaptcha="true"
-                            ></div>
+                            <div data-netlify-recaptcha="true"></div>
                             <button
                                 class="button--dark"
                                 type="submit"
