--- a/index.html
+++ b/index.html
@@ -1108,26 +1108,56 @@
                         </p>
                         <!-- Using Netlify to send form data -->
                         <form
-                            name="contact"
+                            action="#"
                             method="POST"
-                            data-netlify-recaptcha="true"
+                            name="message-form"
+                            id="message-form"
+                            netlify-honeypot="bot-field"
                             data-netlify="true"
                         >
-                            <p>
-                                <label
-                                    >Email: <input type="text" name="name"
-                                /></label>
-                            </p>
-                            <p>
-                                <label
-                                    >Message:
-                                    <textarea name="message"></textarea>
-                                </label>
-                            </p>
+                            <input name="bot-field" hidden />
+                            <input
+                                class="form__input"
+                                type="text"
+                                id="name"
+                                name="name"
+                                placeholder="Your name"
+                                required
+                            />
+                            <input
+                                class="form__input"
+                                type="email"
+                                id="email"
+                                name="email"
+                                placeholder="Your email"
+                                required
+                            />
+                            <textarea
+                                class="form__textarea"
+                                id="message"
+                                name="message"
+                                rows="10"
+                                cols="50"
+                                placeholder="Your message"
+                                required
+                            ></textarea>
                             <div data-netlify-recaptcha="true"></div>
-                            <p>
-                                <button type="submit">Send</button>
-                            </p>
+                            <button
+                                class="button--dark"
+                                type="submit"
+                                form="message-form"
+                                value="Submit"
+                            >
+                                <img
+                                    src="./src/img/icon-send.png"
+                                    alt=""
+                                    width="20"
+                                    height="20"
+                                    class="button-dark__icon"
+                                /><span class="section__body__button__text"
+                                    >Send message</span
+                                >
+                            </button>
                         </form>
                     </div>
                 </section>
