--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,7 @@
                         </p>
                         <!-- Using Netlify to send form data -->
                         <form
+                            action="#contact"
                             method="POST"
                             name="message-form"
                             id="message-form"
