Form success message

--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
                         </p>
                         <!-- Using Netlify to send form data -->
                         <form
-                            action="#contact"
+                            action="javascript:void(0);"
                             method="POST"
                             name="message-form"
                             id="message-form"
