--- a/index.html
+++ b/index.html
@@ -1108,12 +1108,13 @@
                         </p>
                         <!-- Using Netlify to send form data -->
                         <form
-                            action="javascript:void(0);"
+                            action=""
                             method="POST"
                             name="message-form"
                             id="message-form"
                             netlify-honeypot="bot-field"
                             data-netlify="true"
+                            onsubmit="return false"
                         >
                             <input name="bot-field" hidden />
                             <input
