Nav bars buttons issue fixed

--- a/index.html
+++ b/index.html
@@ -87,35 +87,27 @@
                     /></a>
                 </div>
                 <div class="nav__links-container">
-                    <div>
-                        <a
-                            href="#projects"
+                    <a class="nav__link-container" href="#projects">
+                        <div
                             class="sticky-nav__link sticky-nav__link--active"
                             id="nav-projects"
-                            >Projects</a
                         >
-                    </div>
-                    <div>
-                        <a
-                            href="#blog-posts"
-                            class="sticky-nav__link"
-                            id="nav-blog-posts"
-                            >Blog Posts</a
-                        >
-                    </div>
-                    <div>
-                        <a href="#about" class="sticky-nav__link" id="nav-about"
-                            >About</a
-                        >
-                    </div>
-                    <div>
-                        <a
-                            href="#contact"
-                            class="sticky-nav__link"
-                            id="nav-contact"
-                            >Contact</a
-                        >
-                    </div>
+                            Projects
+                        </div>
+                    </a>
+                    <a class="nav__link-container" href="#blog-posts">
+                        <div class="sticky-nav__link" id="nav-blog-posts">
+                            Blog Posts
+                        </div>
+                    </a>
+                    <a class="nav__link-container" href="#about">
+                        <div class="sticky-nav__link" id="nav-about">About</div>
+                    </a>
+                    <a class="nav__link-container" href="#contact">
+                        <div class="sticky-nav__link" id="nav-contact">
+                            Contact
+                        </div>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -165,20 +157,18 @@
                         </div>
                     </div>
                     <div class="nav__links-container">
-                        <div>
-                            <a href="#projects" class="nav__link">Projects</a>
-                        </div>
-                        <div>
-                            <a href="#blog-posts" class="nav__link"
-                                >Blog Posts</a
-                            >
-                        </div>
-                        <div>
-                            <a href="#about" class="nav__link">About</a>
-                        </div>
-                        <div>
-                            <a href="#contact" class="nav__link">Contact</a>
-                        </div>
+                        <a class="nav__link-container" href="#projects">
+                            <div class="nav__link">Projects</div>
+                        </a>
+                        <a class="nav__link-container" href="#blog-posts">
+                            <div class="nav__link">Blog Posts</div>
+                        </a>
+                        <a class="nav__link-container" href="#about">
+                            <div class="nav__link">About</div>
+                        </a>
+                        <a class="nav__link-container" href="#contact">
+                            <div class="nav__link">Contact</div>
+                        </a>
                     </div>
                 </nav>
                 <header class="hero__header">
@@ -1252,20 +1242,18 @@
                 <div class="footer__background-text">Footer</div>
                 <div class="footer__content__container">
                     <div class="footer__content__nav">
-                        <div>
-                            <a href="#projects" class="nav__link">Projects</a>
-                        </div>
-                        <div>
-                            <a href="#blog-posts" class="nav__link"
-                                >Blog Posts</a
-                            >
-                        </div>
-                        <div>
-                            <a href="#about" class="nav__link">About</a>
-                        </div>
-                        <div>
-                            <a href="#contact" class="nav__link">Contact</a>
-                        </div>
+                        <a class="nav__link-container" href="#projects">
+                            <div class="nav__link">Projects</div>
+                        </a>
+                        <a class="nav__link-container" href="#blog-posts">
+                            <div class="nav__link">Blog Posts</div>
+                        </a>
+                        <a class="nav__link-container" href="#about">
+                            <div class="nav__link">About</div>
+                        </a>
+                        <a class="nav__link-container" href="#contact">
+                            <div class="nav__link">Contact</div>
+                        </a>
                     </div>
                     <div class="footer__content__contact">
                         <div class="footer__content__signature">
