--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
                         </p>
                         <!-- Using Netlify to send form data -->
                         <form
-                            action=""
+                            action="#"
                             method="POST"
                             name="message-form"
                             id="message-form"
@@ -1217,7 +1217,7 @@
                                 form="message-form"
                                 value="Submit"
                             >
-                                <div class="button--dark">
+                                <span class="button--dark">
                                     <img
                                         src="./src/img/icon-send.png"
                                         alt=""
@@ -1227,7 +1227,7 @@
                                     /><span class="section__body__button__text"
                                         >Send message</span
                                     >
-                                </div>
+                                </span>
                             </button>
                         </form>
                         <div class="form__success-message hidden">
