--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
                                 </span>
                             </button>
                         </form>
-                        <div class="form__success-message">
+                        <div class="form__success-message hidden">
                             Message submitted successfully. <br />Thank you!
                         </div>
                     </div>
