--- a/index.html
+++ b/index.html
@@ -297,11 +297,19 @@
             </div>
             <article class="section__body-container">
                 <div class="section__body__highlight">
-                    <img
+                    <!-- <img
                         src="./src/img/video-placeholder-600x300.png"
                         alt="Video of project"
                         class="section__body__highlight__preview-gif"
-                    />
+                    /> -->
+                    <iframe
+                        src="https://player.vimeo.com/video/589783027?h=8e2b44c93c"
+                        width="640"
+                        height="360"
+                        frameborder="0"
+                        allow="autoplay; fullscreen; picture-in-picture"
+                        allowfullscreen
+                    ></iframe>
                     <div class="section__body__highlight__buttons">
                         <a class="button--dark-container" href="#">
                             <div class="button--dark">
@@ -363,43 +371,75 @@
                     </header>
                     <div class="article--text">
                         <p>
-                            Consectetur adipiscing elit. Maecenas euismod, velit
-                            ac consequat maximus, erat lacus tincidunt magna, et
-                            laoreet felis magna sed urna. Vestibulum sed
-                            vestibulum libero, bibendum accumsan nisi. Duis
-                            mattis felis vitae pellentesque ultricies. Phasellus
-                            elementum feugiat metus vel fermentum. Aenean vitae
-                            nisl vel metus tincidunt rutrum. Nunc egestas, quam
-                            vitae porttitor lacinia, nisi purus pharetra ipsum,
-                            cursus iaculis neque massa vel dolor.
+                            By the time I decided to start working on this
+                            project I had just finished learning about Promises,
+                            async...await, APIs and error handling. I wanted to
+                            code a project to implement all of this knowledge,
+                            also include that project in my portfolio, and keep
+                            sharpening my design and coding skills 🤓. I usually
+                            try to maximise the return on time invested, so I
+                            tend to do projects that can serve multiple
+                            purposes.
                         </p>
-                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <h3>Choosing the APIs</h3>
                         <p>
-                            Aliquam erat volutpat. In sapien justo, vehicula at
-                            tortor a, maximus porta lorem. In hac habitasse
-                            platea dictumst. Donec mollis elit nulla, sed
-                            pulvinar purus eleifend vel. Maecenas iaculis nulla
-                            ac magna feugiat, et ultricies mi gravida. Lorem
-                            ipsum dolor sit amet Nam at nisl sollicitudin,
-                            laoreet neque sit amet, tempor lectus.
+                            At first, I didn't know what the project’s theme
+                            will be, so I started by researching free APIs to
+                            get some insights on what could be done. I great
+                            resource that I found is this list of public APIs on
+                            GitHub, where APIs ranging from animals and anime to
+                            videos and weather, are being displayed.
+                        </p>
+                        <p>
+                            I found a couple of them that caught my interest,
+                            and I decided to use one that provides COVID-19
+                            up-to-date data. I imagined that it would be
+                            interesting to be able to compare how different
+                            countries are experiencing the COVID-19 pandemic and
+                            get some insights about their vaccination campaigns
+                            (more on this in "User stories"). Plus, we had just
+                            entered a new lockdown in my state 😷, so the theme
+                            felt right.
                         </p>
 
-                        <h3>
-                            Curabitur eget risus vitae ante consequat commodo
-                        </h3>
+                        <h3>Going full throttle with JavaScript</h3>
                         <p>
-                            Aliquam at faucibus leo, suscipit ultricies metus.
-                            Vivamus congue non nunc nec lacinia. In sed
-                            sollicitudin massa. Phasellus ipsum diam, ornare vel
-                            metus vitae, aliquet ornare nulla. Aliquam eleifend
-                            nunc ante, vel lacinia magna dignissim eu. Fusce in
-                            nisl nec augue volutpat dignissim sed vitae leo.
-                            Donec aliquam risus non eros viverra, ac consectetur
-                            diam ornare. Fusce ut efficitur lorem. Etiam
-                            efficitur sed mauris sit amet convallis. Nunc quis
-                            magna rhoncus, eleifend mauris eu, eleifend tellus.
-                            Ut congue purus sit amet metus sollicitudin, et
-                            fermentum leo imperdiet.
+                            When it came the turn of addressing JavaScript, I
+                            started by testing how the APIs worked and how the
+                            data they were returning looked like.
+                        </p>
+                        <p>
+                            I implemented an API for getting the user’s country
+                            name by using reverse geocoding. Once that data was
+                            available (I used async…await for that), I made use
+                            of the name of the country to trigger a new API
+                            request to get the country’s flag.
+                        </p>
+                        <p>
+                            With the data from the first API call or the name of
+                            the country entered by the user, I triggered two API
+                            requests to get the country’s COVID-19 data and the
+                            country’s vaccination data.
+                        </p>
+                        <p>
+                            I employed the data from the API that delivers
+                            COVID-19 data to build the list of available
+                            countries to get information from, to avoid errors
+                            when requesting data for a country that was not
+                            supported by the API 🤓.
+                        </p>
+                        <p>
+                            I used several async..await functions to implement
+                            all the API requests and I also employed some
+                            “spinners” to let the user know that the site was
+                            fetching the data, thus improving its user
+                            experience.
+                        </p>
+                        <p>
+                            I also took advantage of the async…await functions
+                            to handle any possible error that could arise from
+                            the APIs and implemented a messaging system to
+                            render those error messages to the user.
                         </p>
                     </div>
                     <a class="button--dark-container" href="#">
